--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
             <div class="col-sm-12 col-md-4">
                 <div class="card bg-dark text-white mb-4">
                     <div class="card-header p-0 text-center">
-                       <a href="./wordguessgame/"> <h3>Hangman</h3>
+                       <a href="./wordguessgame/>" <h3>Hangman</h3>
                     </div>
                     <img class="card-img-top" alt="Hangman" src="https://placeimg.com/150/150/nature">
                 </a>
