--- a/portfolio.html
+++ b/portfolio.html
@@ -35,10 +35,12 @@
             <div class="col-sm-12 col-md-4">
                 <div class="card bg-dark text-white mb-4">
                     <div class="card-header p-0 text-center">
-                       <a href="./wordguessgame/>" <h3>Hangman</h3>
+                        <a href="../wordguessgame/index.html">
+                            <h3>Hangman</h3>
+                        </a>
                     </div>
                     <img class="card-img-top" alt="Hangman" src="https://placeimg.com/150/150/nature">
-                </a>
+
                     <div class="card-body d-none d-lg-block h-auto">
                         <p class="card-text d-none d-lg-inline">This is a project that plays a simple hangman style
                             word puzzle.</p>
@@ -48,12 +50,15 @@
             <div class="col-sm-12 col-md-4">
                 <div class="card bg-dark text-white mb-4">
                     <div class="card-header p-0 text-center">
-                        <h3>Zombie Game</h3>
+                        <a href="../unit-4-game/index.html">
+                            <h3>Star Wars RPG</h3>
+                        </a>
+
                     </div>
-                    <img class="card-img-top " alt="Alex Trebek" src="https://placeimg.com/150/150/tech">
+                    <img class="card-img-top " alt="zombie" src="https://placeimg.com/150/150/tech">
                     <div class="card-body d-none d-lg-block">
                         <p class="card-text d-none d-lg-inline">
-                            This is a "The Walking Dead" RPG based Zombie game.
+                            This is a basic Star Wars RPG.
                         </p>
                     </div>
                 </div>
@@ -61,7 +66,7 @@
             <div class="col-sm-12 col-md-4">
                 <div class="card bg-dark text-white mb-4">
                     <div class="card-header p-0 text-center">
-                        <h3>Battletoads</h3>
+                       <a href="../triviagame/index.html"><h3>Triva</h3></a> 
                     </div>
                     <img class="card-img-top " alt="Battletoads" src="https://placeimg.com/150/150/animals">
 
@@ -77,12 +82,13 @@
             <div class="col-sm-12 col-md-4">
                 <div class="card bg-dark text-white mb-4">
                     <div class="card-header p-0 text-center">
-                       <a href="./unit-4-game/"> <h3>
-                            Star Wars RPG
-                        </h3>
+                        <a href="./unit-4-game/">
+                            <h3>
+                                Star Wars RPG
+                            </h3>
                     </div>
                     <img class="card-img-top" alt="RPG Game" src="https://placeimg.com/150/150/arch">
-                </a>
+                    </a>
                     <div class="card-body d-none d-lg-block">
                         <p class="card-text d-none d-lg-inline">This is a simple RPG Game with fun
                             graphics.
@@ -91,36 +97,39 @@
                 </div>
             </div>
             <div class="col-sm-12 col-md-4">
-            <div class="card bg-dark text-white mb-4">
-                <div class="card-header p-0 text-center">
-                    <h3>UofT Widget</h3>
-                </div>
-                <img class="card-img-top" alt="UofT Widget" src="https://placeimg.com/150/150/arch">
+                <div class="card bg-dark text-white mb-4">
+                    <div class="card-header p-0 text-center">
+                        <h3>UofT Widget</h3>
+                    </div>
+                    <img class="card-img-top" alt="UofT Widget" src="https://placeimg.com/150/150/arch">
 
-                <div class="card-body d-none d-lg-block">
-                    <p class="card-text d-none d-lg-inline">This is a class planning widget.</p>
+                    <div class="card-body d-none d-lg-block">
+                        <p class="card-text d-none d-lg-inline">This is a class planning widget.</p>
+                    </div>
                 </div>
-            </div>
             </div>
             <div class="col-sm-12 col-md-4">
-            <div class="card bg-dark text-white mb-4">
-                <div class="card-header p-0 text-center">
-                    <h3 class="text-truncate">Rock Paper Scissors</h3>
-                </div>
-                <img class="card-img-top " alt="Rock Paper Scissors" src="https://placeimg.com/150/150/people">
+                <div class="card bg-dark text-white mb-4">
+                    <div class="card-header p-0 text-center">
+                        <h3 class="text-truncate">Rock Paper Scissors</h3>
+                    </div>
+                    <img class="card-img-top " alt="Rock Paper Scissors" src="https://placeimg.com/150/150/people">
 
-                <div class="card-body d-none d-lg-block">
-                    <p class="card-text d-none d-lg-inline">This is a simple Rock Paper Scissors best of three game.</p>
-                </div>
+                    <div class="card-body d-none d-lg-block">
+                        <p class="card-text d-none d-lg-inline">This is a simple Rock Paper Scissors best of three
+                            game.</p>
+                    </div>
 
-            </div>
+                </div>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-12 col-md-4">
                 <div class="card bg-dark text-white mb-2">
                     <div class="card-header p-0 text-center">
-                        <h3>Jeopardy!</h3>
+                        <a href="../triviagame/">
+                            <h3>Triva!</h3>
+                        </a>
                     </div>
                     <img class="card-img-top " alt="Jeopardy Game" src="https://placeimg.com/150/150/tech">
                     <div class="card-body d-none d-lg-block">
@@ -132,15 +141,18 @@
             </div>
         </div>
     </div>
-    
+
 
     <footer class="footer fixed-bottom mt-sm-4 text-center">
         <p id="footerText" class="text-white">Copyright &copy 2018 Kevin Major</p>
     </footer>
     <!-- scripts for bootstrap functionality -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
