--- a/portfolio.html
+++ b/portfolio.html
@@ -72,7 +72,7 @@
 
                     <div class="card-body d-none d-lg-block">
                         <p class="card-text d-none d-lg-inline">
-                            Recreation of the famous Battletoads videogame.
+                            Basic timed trivia game!
                         </p>
                     </div>
                 </div>
@@ -82,16 +82,15 @@
             <div class="col-sm-12 col-md-4">
                 <div class="card bg-dark text-white mb-4">
                     <div class="card-header p-0 text-center">
-                        <a href="./unit-4-game/">
+                        <a href="../giftastic/index.html">
                             <h3>
-                                Star Wars RPG
+                                GifTastic 
                             </h3>
                     </div>
                     <img class="card-img-top" alt="RPG Game" src="https://placeimg.com/150/150/arch">
                     </a>
                     <div class="card-body d-none d-lg-block">
-                        <p class="card-text d-none d-lg-inline">This is a simple RPG Game with fun
-                            graphics.
+                        <p class="card-text d-none d-lg-inline">Generate Gifs to share with friends! Add your own topics.
                         </p>
                     </div>
                 </div>
