--- a/portfolio.html
+++ b/portfolio.html
@@ -36,10 +36,10 @@
                 <div class="card bg-dark text-white mb-4">
                     <div class="card-header p-0 text-center">
                         <a href="../wordguessgame/index.html">
-                            <h3>Hangman</h3>
+                            <h3>Jurassic Park Hangman</h3>
                         </a>
                     </div>
-                    <img class="card-img-top" alt="Hangman" src="https://placeimg.com/150/150/nature">
+                    <img class="card-img-top" alt="Hangman" src="./assets/images/jurassic_park.png">
 
                     <div class="card-body d-none d-lg-block h-auto">
                         <p class="card-text d-none d-lg-inline">This is a project that plays a simple hangman style
