added screenclips of portfolio items and hid unfinished projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
                             <h3>Jurassic Park Hangman</h3>
                         </a>
                     </div>
-                    <img class="card-img-top" alt="Hangman" src="./assets/images/jurassic_park.png">
+                    <img class="card-img-top" alt="Hangman" src="./assets/images/jurassicpark_screenclip.png">
 
                     <div class="card-body d-none d-lg-block h-auto">
                         <p class="card-text d-none d-lg-inline">This is a project that plays a simple hangman style
@@ -55,10 +55,10 @@
                         </a>
 
                     </div>
-                    <img class="card-img-top " alt="zombie" src="https://placeimg.com/150/150/tech">
+                    <img class="card-img-top " alt="Star Wars RPG" src="./assets/images/starwars_screenclip.png">
                     <div class="card-body d-none d-lg-block">
                         <p class="card-text d-none d-lg-inline">
-                            This is a basic Star Wars RPG.
+                            This is a basic Star Wars RPG. Select your character and opponents wisely!
                         </p>
                     </div>
                 </div>
@@ -66,13 +66,13 @@
             <div class="col-sm-12 col-md-4">
                 <div class="card bg-dark text-white mb-4">
                     <div class="card-header p-0 text-center">
-                       <a href="../triviagame/index.html"><h3>Triva</h3></a> 
+                    <a href="../triviagame/index.html"><h3>Timer Triva</h3></a> 
                     </div>
-                    <img class="card-img-top " alt="Battletoads" src="https://placeimg.com/150/150/animals">
+                    <img class="card-img-top " alt="Countdown Trivia" src="./assets/images/trivia_screenclip.png">
 
                     <div class="card-body d-none d-lg-block">
                         <p class="card-text d-none d-lg-inline">
-                            Basic timed trivia game!
+                            Basic timed trivia game! Open to topic suggestions. 
                         </p>
                     </div>
                 </div>
@@ -87,20 +87,20 @@
                                 GifTastic 
                             </h3>
                     </div>
-                    <img class="card-img-top" alt="RPG Game" src="https://placeimg.com/150/150/arch">
+                    <img class="card-img-top" alt="RPG Game" src="./assets/images/giftastic_screenclip.png">
                     </a>
                     <div class="card-body d-none d-lg-block">
-                        <p class="card-text d-none d-lg-inline">Generate Gifs to share with friends! Add your own topics.
+                        <p class="card-text d-none d-lg-inline">Generate Gifs via Giphy API! Add your own topics to suit your mood. 
                         </p>
                     </div>
                 </div>
             </div>
             <div class="col-sm-12 col-md-4">
-                <div class="card bg-dark text-white mb-4">
+                <div class="card bg-dark text-white mb-4 d-none">
                     <div class="card-header p-0 text-center">
                         <h3>UofT Widget</h3>
                     </div>
-                    <img class="card-img-top" alt="UofT Widget" src="https://placeimg.com/150/150/arch">
+                    <img class="card-img-top" alt="UofT Widget" src="https://placeimg.com/340/215/arch">
 
                     <div class="card-body d-none d-lg-block">
                         <p class="card-text d-none d-lg-inline">This is a class planning widget.</p>
@@ -108,11 +108,11 @@
                 </div>
             </div>
             <div class="col-sm-12 col-md-4">
-                <div class="card bg-dark text-white mb-4">
+                <div class="card bg-dark text-white mb-4 d-none">
                     <div class="card-header p-0 text-center">
                         <h3 class="text-truncate">Rock Paper Scissors</h3>
                     </div>
-                    <img class="card-img-top " alt="Rock Paper Scissors" src="https://placeimg.com/150/150/people">
+                    <img class="card-img-top " alt="Rock Paper Scissors" src="https://placeimg.com/340/215/people">
 
                     <div class="card-body d-none d-lg-block">
                         <p class="card-text d-none d-lg-inline">This is a simple Rock Paper Scissors best of three
@@ -124,7 +124,7 @@
         </div>
         <div class="row">
             <div class="col-sm-12 col-md-4">
-                <div class="card bg-dark text-white mb-2">
+                <div class="card bg-dark text-white mb-2 d-none">
                     <div class="card-header p-0 text-center">
                         <a href="../triviagame/">
                             <h3>Triva!</h3>
